@@ -14,6 +14,7 @@ Right now it's composed of five mainly modules:
 * Recoverable: takes care of reseting the user password and send reset instructions.
 * Rememberable: manages generating and clearing token for remember the user from a saved cookie.
 * Timeoutable: expires sessions without activity in a certain period of time.
+* Trackable: tracks sign in count, timestamps and ip.
 * Validatable: creates all needed validations for email and password. It's totally optional, so you're able to to customize validations by yourself.
 
 There's an example application using Devise at http://github.com/plataformatec/devise_example .
