@@ -1,5 +1,2 @@
 * Create update_with_password
 * Make test run with different ORMs
-* Use request_ip in session cookies
-* Devise::BruteForceProtection
-* Devise::Trackeable
